--- a/ml-models/anomaly-detection/Data-Analyses.ipynb
+++ b/ml-models/anomaly-detection/Data-Analyses.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "2020-04-23 11:14:42.999  pump-2  18.245524      0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "2020-04-23 11:14:39.617  10.678349      0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -893,7 +893,7 @@
        "19  14.035776  12.314211  11.173016  10.768019   9.691997  0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
        "max       1.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1057,6 +1057,74 @@
       "Number of features: 5\n",
       "Number of episodes with anomaly: 84\n",
       "Number of episodes without anomaly: 2930\n",
+      "Anomaly rate in dataset: 2.79%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate number of episodes\n",
+    "n_episodes = df_epis.shape[0]\n",
+    "\n",
+    "# Calculate number of features\n",
+    "n_features = df_epis.shape[1] - 1\n",
+    "\n",
+    "# Calculate passing students\n",
+    "n_anomaly = df_epis[df_epis['L']==1].shape[0]\n",
+    "\n",
+    "# TODO: Calculate failing students\n",
+    "n_normal = df_epis[df_epis['L']==0].shape[0]\n",
+    "\n",
+    "# TODO: Calculate graduation rate\n",
+    "anomaly_rate = n_anomaly / float(n_episodes) *100\n",
+    "\n",
+    "# Print the results\n",
+    "print (\"Total number of episodes: {}\".format(n_episodes))\n",
+    "print (\"Number of features: {}\".format(n_features))\n",
+    "print (\"Number of episodes with anomaly: {}\".format(n_anomaly))\n",
+    "print (\"Number of episodes witManipulatehout anomaly: {}\".format(n_normal))\n",
+    "print (\"Anomaly rate in dataset: {:.2f}%\".format(anomaly_rate))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's vary the anomalies to make the model more robust"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factor = 5 # Number of copies\n",
+    "dfr = df_epis.copy()\n",
+    "for i in range(1,factor):\n",
+    "\n",
+    "    f = 0.5 + ((i - 1 ) * 0.5 / (factor-1)) # vary the anomaly by a factor \n",
+    "    #print(i,f)\n",
+    "    \n",
+    "    dfi = df_epis.copy()\n",
+    "    dfi['F5'] = np.where(dfi['L']==1, dfi['F5']*f, dfi['F5']) # Lower the outliers\n",
+    "    dfr = dfr.append(dfi)\n",
+    "    \n",
+    "df_epis = dfr.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of episodes: 75350\n",
+      "Number of features: 5\n",
+      "Number of episodes with anomaly: 2100\n",
+      "Number of episodes without anomaly: 73250\n",
       "Anomaly rate in dataset: 2.79%\n"
      ]
     }
@@ -1094,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1165,17 +1233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set has 2019 samples.\n",
-      "Testing set has 995 samples.\n",
-      "Anomaly rate of the training set: 2.72%\n",
-      "Anomaly rate of the testing set: 2.91%\n"
+      "Training set has 10096 samples.\n",
+      "Testing set has 4974 samples.\n",
+      "Anomaly rate of the training set: 2.76%\n",
+      "Anomaly rate of the testing set: 2.83%\n"
      ]
     }
    ],
@@ -1210,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1278,41 +1346,41 @@
       "\n",
       "DecisionTreeClassifier: \n",
       "\n",
-      "Training a DecisionTreeClassifier using a training set size of 2019. . .\n",
-      "Trained model in 0.0033 seconds\n",
-      "Made predictions in 0.0009 seconds.\n",
+      "Training a DecisionTreeClassifier using a training set size of 10096. . .\n",
+      "Trained model in 0.0378 seconds\n",
+      "Made predictions in 0.0020 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0009 seconds.\n",
-      "F1 score for test set: 1.0000.\n",
+      "Made predictions in 0.0019 seconds.\n",
+      "F1 score for test set: 0.9783.\n",
       "\n",
       "SVC: \n",
       "\n",
-      "Training a SVC using a training set size of 2019. . .\n",
-      "Trained model in 0.0087 seconds\n",
-      "Made predictions in 0.0045 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0026 seconds.\n",
-      "F1 score for test set: 1.0000.\n",
+      "Training a SVC using a training set size of 10096. . .\n",
+      "Trained model in 0.0681 seconds\n",
+      "Made predictions in 0.0453 seconds.\n",
+      "F1 score for training set: 0.9472.\n",
+      "Made predictions in 0.0294 seconds.\n",
+      "F1 score for test set: 0.9278.\n",
       "\n",
       "GaussianNB: \n",
       "\n",
-      "Training a GaussianNB using a training set size of 2019. . .\n",
-      "Trained model in 0.0017 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 1.0000.\n",
+      "Training a GaussianNB using a training set size of 10096. . .\n",
+      "Trained model in 0.0049 seconds\n",
+      "Made predictions in 0.0042 seconds.\n",
+      "F1 score for training set: 0.8423.\n",
+      "Made predictions in 0.0018 seconds.\n",
+      "F1 score for test set: 0.7845.\n",
       "\n",
       "Report for DecisionTreeClassifier:\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00       966\n",
-      "           1       1.00      1.00      1.00        29\n",
+      "           0       1.00      1.00      1.00      4833\n",
+      "           1       1.00      0.96      0.98       141\n",
       "\n",
-      "    accuracy                           1.00       995\n",
-      "   macro avg       1.00      1.00      1.00       995\n",
-      "weighted avg       1.00      1.00      1.00       995\n",
+      "    accuracy                           1.00      4974\n",
+      "   macro avg       1.00      0.98      0.99      4974\n",
+      "weighted avg       1.00      1.00      1.00      4974\n",
       "\n",
       "----------------------------------------------------\n",
       "\n",
@@ -1320,12 +1388,12 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00       966\n",
-      "           1       1.00      1.00      1.00        29\n",
+      "           0       1.00      1.00      1.00      4833\n",
+      "           1       1.00      0.87      0.93       141\n",
       "\n",
-      "    accuracy                           1.00       995\n",
-      "   macro avg       1.00      1.00      1.00       995\n",
-      "weighted avg       1.00      1.00      1.00       995\n",
+      "    accuracy                           1.00      4974\n",
+      "   macro avg       1.00      0.93      0.96      4974\n",
+      "weighted avg       1.00      1.00      1.00      4974\n",
       "\n",
       "----------------------------------------------------\n",
       "\n",
@@ -1333,12 +1401,12 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00       966\n",
-      "           1       1.00      1.00      1.00        29\n",
+      "           0       0.99      1.00      0.99      4833\n",
+      "           1       1.00      0.65      0.78       141\n",
       "\n",
-      "    accuracy                           1.00       995\n",
-      "   macro avg       1.00      1.00      1.00       995\n",
-      "weighted avg       1.00      1.00      1.00       995\n",
+      "    accuracy                           0.99      4974\n",
+      "   macro avg       0.99      0.82      0.89      4974\n",
+      "weighted avg       0.99      0.99      0.99      4974\n",
       "\n",
       "----------------------------------------------------\n"
      ]
@@ -1385,21 +1453,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Support Vector Machines is the \"slowest\" model, but provode the best forecasts.\n",
+    "DecisionTreeClassifier has the best peformance and provides the best forecasts.\n",
     "\n",
     "Let's save the model and call it a day ...."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 1.0\n"
+      "Score: 0.9987937273823885\n"
      ]
     }
    ],
@@ -1407,7 +1475,7 @@
     "from joblib import dump, load\n",
     "\n",
     "filename = 'model.joblib'\n",
-    "dump(clf_B, open(filename, 'wb'))\n",
+    "dump(clf_A, open(filename, 'wb'))\n",
     "\n",
     "# Validate that the model can be loaded\n",
     "\n",
