--- a/ml-models/anomaly-detection/Data-Analyses.ipynb
+++ b/ml-models/anomaly-detection/Data-Analyses.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# MANUela Anomaly ML Model\n",
     "\n",
-    "Goal: Build an machine lerning model that detect anomalies in sensor vibration\n",
+    "Goal: Build a machine lerning model that detect anomalies in sensor vibration data\n",
     "\n",
     "- Wrangling sensor data \n",
     "- Save the training data\n",
@@ -1453,6 +1453,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The **precision** is the ratio ```tp / (tp + fp)``` where tp is the number of true positives and fp the number of false positives. The precision is intuitively the ability of the classifier not to label as positive a sample that is negative.\n",
+    "\n",
+    "The **recall** is the ratio ```tp / (tp + fn)``` where tp is the number of true positives and fn the number of false negatives. The recall is intuitively the ability of the classifier to find all the positive samples.\n",
+    "\n",
+    "The **F1 score** can be interpreted as a weighted average of the precision and recall, where an F1 score reaches its best value at 1 and worst score at 0. The relative contribution of precision and recall to the F1 score are equal. The formula for the F1 score is:\n",
+    "\n",
+    "```F1 = 2 * (precision * recall) / (precision + recall)```\n",
+    "\n",
+    "The **support** is the number of occurrences of each class in ```y_true```.\n",
+    "\n",
+    "Source:\n",
+    "[sklearn.metrics.precision_recall_fscore_support](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_recall_fscore_support.html) [sklearn.metrics.f1_score](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.f1_score.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Brief interpretation:**\n",
+    "\n",
     "DecisionTreeClassifier has the best peformance and provides the best forecasts.\n",
     "\n",
     "Let's save the model and call it a day ...."
