Add S3 upload of model

--- a/ml-models/anomaly-detection/Anomaly-Detection-simple-ML-Training.ipynb
+++ b/ml-models/anomaly-detection/Anomaly-Detection-simple-ML-Training.ipynb
@@ -625,6 +625,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save the model in the S3 Model store\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model_upload import upload_model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -648,9 +664,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
